apps/core-api/overlays/development/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/environment: development
        app.kubernetes.io/instance: core-api-development
    spec:
      containers:
        - name: app
